--- a/template/src/sys/index.html
+++ b/template/src/sys/index.html
@@ -12,18 +12,16 @@
 <body>
 <div class="system">
     <div class="input-content">
-        <label>URL:</label>
-        <input id="urlInput" value="index.html"/>
+        <label>Page URL:</label>
+        <input id="urlInput" value="index.html" placeholder="please input page url"/>
         <div class="button-group">
             <div class="button" onclick="refreshUrl()">Statistic</div>
         </div>
     </div>
     <div class="statistics">
-        <div id="statistics"></div>
+
     </div>
 </div>
-
-<iframe src="../index.html"></iframe>
 <script src="js/index.js"></script>
 </body>
 </html>
