--- a/template/src/sys/css/index.scss
+++ b/template/src/sys/css/index.scss
@@ -69,6 +69,12 @@ html,body{
       outline:none;
       border:1px solid #ccc;
       text-indent:15px;
+      color: blue;
+      font-size: 16px;
+      background-color:#c6e9ea;
+      &:focus{
+        background-color:#fff;
+      }
     }
   }
   .statistics{
