--- a/template/src/index.html
+++ b/template/src/index.html
@@ -36,7 +36,7 @@
             <div>
                 <a target="_blank" href="core/base/annular-menu/example/index.html">menu Demo</a>
                 <a target="_blank" href="core/base/annular-menu/example/index-default.html">menu Demo(default)</a>
-                <a target="_blank" href="dev.html">structure</a>
+                <a target="_blank" href="sys/index.html">structure</a>
             </div>
         </nav>
         <div class="content">
