--- a/template/src/index.html
+++ b/template/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>X3New</title>
-    <base href="/">
+    <title>new</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="index.css"/>
@@ -15,7 +14,6 @@
     <script src="node_modules/dom-resource-loader/dest/resource-loader.js"></script>
     <script src="node_modules/webapp-core/build/js/webapp-core.js"></script>
     <script>
-        //t
         if(!window.Promise){
             window.Promise = HERE.$Promise;
         }
