--- a/template/src/sys/index.html
+++ b/template/src/sys/index.html
@@ -5,7 +5,9 @@
     <title>Application statistics</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/index.css"/>
+    <link rel="stylesheet" href="../core/base/info-dialog/dest/css/dialog.css"/>
     <script src="../vendor/gojs/go-debug.js"></script>
+    <script src="../core/base/info-dialog/dest/js/dialog.js"></script>
     <script src="js/diagram.js"></script>
     <script src="js/statistics.js"></script>
 </head>
