update vue main template

--- a/template/src/index.html
+++ b/template/src/index.html
@@ -20,7 +20,7 @@
     </script>
 </head>
 <body>
-    <div v-cloak id="deepClue-app" class="deepclue-main">
+    <div v-cloak id="main-app" class="main">
         <nav class="nav">
             <router-link to="/search">search</router-link>
             <router-link to="/cube-search">cube-search</router-link>
