--- a/template/src/index.css
+++ b/template/src/index.css
@@ -38,7 +38,7 @@ body, html {
     -ms-transform: scaleX(1);
     -o-transform: scaleX(1);
     opacity: 1; } }
-.deepclue-main {
+.main {
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -49,28 +49,28 @@ body, html {
   -moz-animation: main-enter 0.4s;
   -ms-animation: main-enter 0.4s;
   -o-animation: main-enter 0.4s; }
-  .deepclue-main .nav {
+  .main .nav {
     width: 20%;
     padding: 10px;
     background-color: #2f2f2f;
     font-size: 1.3rem; }
-    .deepclue-main .nav > div {
+    .main .nav > div {
       margin-top: 100px; }
-    .deepclue-main .nav > * {
+    .main .nav > * {
       border-radius: .15em; }
-    .deepclue-main .nav a {
+    .main .nav a {
       text-decoration: none;
       margin-top: 10px;
       display: block;
       padding: 5px;
       color: #fff;
       border-bottom: 1px solid #5d4f4f; }
-      .deepclue-main .nav a:hover {
+      .main .nav a:hover {
         border-color: #cebfbf; }
-      .deepclue-main .nav a.router-link-exact-active {
+      .main .nav a.router-link-exact-active {
         color: #000;
         background-color: #ccc; }
-  .deepclue-main .content {
+  .main .content {
     font-size: 1.1rem;
     display: flex;
     align-items: center;
@@ -78,7 +78,7 @@ body, html {
     flex: 1;
     background-color: #dde6ea;
     color: #2025e8; }
-    .deepclue-main .content > * {
+    .main .content > * {
       animation: main-enter-text 0.6s;
       -webkit-animation: main-enter-text 0.6s;
       -moz-animation: main-enter-text 0.6s;
