--- a/vue-template/src/app/comp/dropdown/comp.css
+++ b/vue-template/src/app/comp/dropdown/comp.css
@@ -67,21 +67,41 @@
     -ms-transform: scaleY(1);
     -o-transform: scaleY(1); } }
   .mg-dropdown .dropdown-pop {
-    position: absolute;
-    background-color: #fff;
-    z-index: 100;
-    top: 100%;
-    left: 50%;
     border: 1px solid #e9e9e9;
     transform-origin: top;
     -webkit-transform-origin: top;
     -moz-transform-origin: top;
     -ms-transform-origin: top;
-    -o-transform-origin: top;
-    animation: mg-dropdown-enter 0.4s;
-    -webkit-animation: mg-dropdown-enter 0.4s;
-    -moz-animation: mg-dropdown-enter 0.4s;
-    -ms-animation: mg-dropdown-enter 0.4s;
-    -o-animation: mg-dropdown-enter 0.4s; }
+    -o-transform-origin: top; }
+    .mg-dropdown .dropdown-pop.abs-layout {
+      position: absolute;
+      background-color: #fff;
+      z-index: 100;
+      top: 100%;
+      left: 50%;
+      animation: mg-dropdown-enter 0.4s;
+      -webkit-animation: mg-dropdown-enter 0.4s;
+      -moz-animation: mg-dropdown-enter 0.4s;
+      -ms-animation: mg-dropdown-enter 0.4s;
+      -o-animation: mg-dropdown-enter 0.4s; }
+    .mg-dropdown .dropdown-pop.fixed-layout {
+      position: fixed;
+      z-index: 2;
+      left: 0;
+      top: 0;
+      opacity: 0;
+      background-color: #fff;
+      transition: opacity 0.4s;
+      -webkit-transition: opacity 0.4s;
+      -moz-transition: opacity 0.4s;
+      -ms-transition: opacity 0.4s;
+      -o-transition: opacity 0.4s; }
+      .mg-dropdown .dropdown-pop.fixed-layout.layout-finished {
+        opacity: 1;
+        animation: mg-dropdown-enter 0.4s;
+        -webkit-animation: mg-dropdown-enter 0.4s;
+        -moz-animation: mg-dropdown-enter 0.4s;
+        -ms-animation: mg-dropdown-enter 0.4s;
+        -o-animation: mg-dropdown-enter 0.4s; }
 
 /*# sourceMappingURL=comp.css.map */
