--- a/vue-template/src/app/comp/dropdown/comp.scss
+++ b/vue-template/src/app/comp/dropdown/comp.scss
@@ -12,13 +12,28 @@
     }
   }
   .dropdown-pop{
-    position: absolute;
-    background-color: #fff;
-    z-index:100;
-    top:100%;
-    left:50%;
     border:1px solid $borderColor;
     @include css(transform-origin,top);
-    @include css(animation,mg-dropdown-enter .4s);
+    &.abs-layout{
+      position: absolute;
+      background-color: #fff;
+      z-index:100;
+      top:100%;
+      left:50%;
+      @include css(animation,mg-dropdown-enter .4s);
+    }
+    &.fixed-layout{
+      position: fixed;
+      z-index:2;
+      left:0;
+      top:0;
+      opacity: 0;
+      background-color: #fff;
+      @include css(transition,opacity .4s);
+      &.layout-finished{
+        opacity: 1;
+        @include css(animation,mg-dropdown-enter .4s);
+      }
+    }
   }
 }
